--- a/.github/workflows/ secret.yml
+++ b/.github/workflows/ secret.yml
@@ -1,18 +1,9 @@
-name: Secret Workflow
-
-on:
-  push:
-    branches:
-      - main
+name: Echo Secret
+on: [push]  # Triggers the workflow on a push to the repository.
 
 jobs:
-  use-secret:
+  display-secret:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Use Secret Securely
-        env:
-          SECRET: ${{ secrets.SECRET }}
-        run: echo "The secret is set and being used securely."
+      - name: Echo Secret
+        run: echo "The secret is ${{ secrets.SECRET }}"
