--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -1,10 +1,12 @@
-name: Echo Secret
-on: [push]  # Triggers the workflow on a push to the repository.
-
 jobs:
-  display-secret:
+  use-secret:
     runs-on: ubuntu-latest
     steps:
-      - name: Echo Secret
-        run: echo "The secret is ${{ secrets.SECRET }}"
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Use GitHub Secret
+        run: echo "Using secret safely"
+        env:
+          MY_SECRET: ${{ secrets.SECRET }}
         
