--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -1,3 +1,6 @@
+name: Echo Secret
+on: [push]  # Triggers the workflow on a push to the repository.
+
 jobs:
   use-secret:
     runs-on: ubuntu-latest
