--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -2,14 +2,9 @@ name: Echo Secret
 on: [push]  # Triggers the workflow on a push to the repository.
 
 jobs:
-  use-secret:
+  display-secret:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Use GitHub Secret
-        run: echo "Using secret safely"
-        env:
-          MY_SECRET: ${{ secrets.SECRET }}
+      - name: Echo Secret
+        run: echo "The secret is ${{ secrets.SECRET }}"
         
